--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,10 @@
   <modules>
     <module>cloud-provider-payment8001</module>
     <module>cloud-consumer-order80</module>
+      <module>cloud-api-commons</module>
+    <module>cloud-api-commons</module>
+    <module>cloud-api-commons</module>
+    <module>cloud-api-common</module>
   </modules>
   <packaging>pom</packaging>
 
