--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>cloud-api-commons</module>
     <module>cloud-api-commons</module>
     <module>cloud-api-common</module>
+      <module>cloud-eureka-server7001</module>
   </modules>
   <packaging>pom</packaging>
 
