支付模块-消费模块注册进eureka

--- a/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud-eureka-server7001/src/main/resources/application.yml
@@ -14,7 +14,7 @@ eureka:
     # false表示自己端就是注册中心
     fetch-registry: false
     service-url:
-      defaultzone: http://${eureka.instance.homename}:${server.port}/eureka/
+      defaultZone: http://${eureka.instance.homename}:${server.port}/eureka
 
 
 
