--- a/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud-consumer-order80/src/main/resources/application.yml
@@ -3,3 +3,12 @@ server:
 spring:
   application:
     name: cloud-order-consumer
+
+eureka:
+  client:
+    # 将自己注册进eureka中心
+    register-with-eureka: true
+    # 是否抓取注册信息，默认为true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:7001/eureka
