--- a/cloud-eureka-server7002/src/main/resources/application.yml
+++ b/cloud-eureka-server7002/src/main/resources/application.yml
@@ -1,20 +1,20 @@
 server:
-  port: 7001
+  port: 7002
 
 spring:
   application:
-    name: cloud-eureka-server
+    name: cloud-eureka-server2
 
 eureka:
   instance:
-    hostname: eureka7001.com
+    hostname: eureka7002.com
   client:
     # false表示不再注册中心注册自己
     register-with-eureka: false
     # false表示自己端就是注册中心
     fetch-registry: false
     service-url:
-      defaultZone: http://eureka7002.com:7002/eureka
+      defaultZone: http://eureka7001.com:7001/eureka
 
 
 
