--- a/cloud-consumer-feign-order80/src/main/resources/application.yml
+++ b/cloud-consumer-feign-order80/src/main/resources/application.yml
@@ -12,3 +12,7 @@ eureka:
     service-url:
       defaultZone: http://eureka7001.com:7001/eureka, http://eureka7002.com:7002/eureka
 
+ribbon:
+  ReadTimeout: 5000
+  ConnectTimeout: 5000
+
