--- a/cloud-consumer-feign-order80/src/main/resources/application.yml
+++ b/cloud-consumer-feign-order80/src/main/resources/application.yml
@@ -15,4 +15,7 @@ eureka:
 ribbon:
   ReadTimeout: 5000
   ConnectTimeout: 5000
-
+logging:
+  level:
+    # feign日志以什么级别监控哪个接口
+    com.laoxu.springcloud.service.PaymentService: debug
