--- a/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud-eureka-server7001/src/main/resources/application.yml
@@ -14,7 +14,10 @@ eureka:
     # false表示自己端就是注册中心
     fetch-registry: false
     service-url:
+      # 集群指向其他eureka
       defaultZone: http://eureka7002.com:7002/eureka
+      # 单机则指向自己
+      # defaultZone: http://eureka7001.com:7001/eureka
 
 
 
