--- a/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud-consumer-order80/src/main/resources/application.yml
@@ -3,7 +3,12 @@ server:
 spring:
   application:
     name: cloud-order-consumer
-
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      # 采样率值介于0到1之间，1则表示全采集
+      probability: 1
 eureka:
   client:
     # 将自己注册进eureka中心
