--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
       <module>cloud-stream-rabbitmq-provider8801</module>
     <module>cloud-stream-rabbitmq-consumer8802</module>
       <module>cloud-stream-rabbitmq-consumer8803</module>
+      <module>cloudalibaba-provider-payment9001</module>
   </modules>
   <packaging>pom</packaging>
 
@@ -44,6 +45,13 @@
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>com.alibaba.cloud</groupId>
+        <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+        <version>2.1.1.BUILD-SNAPSHOT</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
