seata多服务多数据库事务管理

--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -33,5 +33,5 @@ eureka:
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.laoxu.springcloud.entities
+  type-aliases-package: com.laoxu.com.laoxu.springcloud.entities
 
