--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.laoxu.springcloud</groupId>
+  <groupId>com.laoxu.com.laoxu.springcloud</groupId>
   <artifactId>cloud2020</artifactId>
   <version>1.0-SNAPSHOT</version>
   <modules>
@@ -36,6 +36,9 @@
     <module>cloudalibaba-provider-payment9003</module>
     <module>cloudalibaba-provider-payment9004</module>
       <module>cloudalibaba-consumer-nacos-order84</module>
+      <module>seata-account-service2001</module>
+      <module>seata-account-service2002</module>
+      <module>seata-account-service2003</module>
   </modules>
   <packaging>pom</packaging>
 
